--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
 	<div class="main-visual"></div>
 
-	<div class="main clearfix"></div>
+	<div class="main clearfix">
 
+		<div class="sideber-left"></div>
 		<div class="blog"></div>
-		<div class="sideber"></div>
+		<div class="sideber-right"></div>
+	</div>
 
 	<div class="footer"></div>
-	
+
 </body>
 </html>
